--- a/client/src/style.scss
+++ b/client/src/style.scss
@@ -4,7 +4,7 @@ $lightGreen: #b9e7e7;
   display: flex;
   justify-content: center;
   color: black;
-//   background-color: white;
+  // background-color: white;
  z-index: 1;
   
 
@@ -166,8 +166,6 @@ $lightGreen: #b9e7e7;
               width: 100%;
               max-height: 400px;
               object-fit: cover;
-            //  z-index: 2;
-            //   border-radius: 50%;
 
           
             }
@@ -207,190 +205,190 @@ $lightGreen: #b9e7e7;
       }
     }
 
-//     //SINGLE
+    //SINGLE
 
-//     .single {
-//       display: flex;
-//       gap: 50px;
+    .single {
+      display: flex;
+      gap: 50px;
 
-//       .content {
-//         flex: 5;
-//         display: flex;
-//         flex-direction: column;
-//         gap: 30px;
+      .content {
+        flex: 5;
+        display: flex;
+        flex-direction: column;
+        gap: 30px;
 
-//         img {
-//           width: 100%;
-//           height: 300px;
-//           object-fit: cover;
-//         }
+        img {
+          width: 100%;
+          height: 300px;
+          object-fit: cover;
+        }
 
-//         .user {
-//           display: flex;
-//           align-items: center;
-//           gap: 10px;
-//           font-size: 14px;
-//           img {
-//             width: 50px;
-//             height: 50px;
-//             border-radius: 50%;
-//             object-fit: cover;
-//           }
+        .user {
+          display: flex;
+          align-items: center;
+          gap: 10px;
+          font-size: 14px;
+          img {
+            width: 50px;
+            height: 50px;
+            border-radius: 50%;
+            object-fit: cover;
+          }
 
-//           span {
-//             font-weight: bold;
-//           }
-//         }
+          span {
+            font-weight: bold;
+          }
+        }
 
-//         .edit {
-//           display: flex;
-//           gap: 5px;
+        .edit {
+          display: flex;
+          gap: 5px;
 
-//           img {
-//             width: 20px;
-//             height: 20px;
-//             cursor: pointer;
-//           }
-//         }
+          img {
+            width: 20px;
+            height: 20px;
+            cursor: pointer;
+          }
+        }
 
-//         h1 {
-//           font-size: 42px;
-//           color: #333;
-//         }
+        h1 {
+          font-size: 42px;
+          color: #333;
+        }
 
-//         p {
-//           text-align: justify;
-//           line-height: 30px;
-//         }
-//       }
-//       .menu {
-//         flex: 2;
-//         display: flex;
-//         flex-direction: column;
-//         gap: 25px;
+        p {
+          text-align: justify;
+          line-height: 30px;
+        }
+      }
+      .menu {
+        flex: 2;
+        display: flex;
+        flex-direction: column;
+        gap: 25px;
 
-//         h1 {
-//           font-size: 20px;
-//           color: #555;
-//         }
+        h1 {
+          font-size: 20px;
+          color: #555;
+        }
 
-//         .post {
-//           display: flex;
-//           flex-direction: column;
-//           gap: 10px;
+        .post {
+          display: flex;
+          flex-direction: column;
+          gap: 10px;
 
-//           img {
-//             width: 100%;
-//             height: 200px;
-//             object-fit: cover;
-//           }
+          img {
+            width: 100%;
+            height: 200px;
+            object-fit: cover;
+          }
 
-//           h2 {
-//             color: #555;
-//           }
+          h2 {
+            color: #555;
+          }
 
-//           button {
-//             width: max-content;
-//             padding: 7.5px 15px;
-//             border: none;
-//             cursor: pointer;
-//             color: teal;
-//             background-color: white;
-//             border: 1px solid teal;
+          button {
+            width: max-content;
+            padding: 7.5px 15px;
+            border: none;
+            cursor: pointer;
+            color: teal;
+            background-color: white;
+            border: 1px solid teal;
 
-//             &:hover {
-//               border: 1px solid white;
-//               background-color: $lightGreen;
-//               color: black;
-//             }
-//           }
-//         }
-//       }
-//     }
+            &:hover {
+              border: 1px solid white;
+              background-color: $lightGreen;
+              color: black;
+            }
+          }
+        }
+      }
+    }
 
-//     //WRITE
+    //WRITE
 
-//     .add {
-//       margin-top: 20px;
-//       display: flex;
-//       gap: 20px;
+    .add {
+      margin-top: 20px;
+      display: flex;
+      gap: 20px;
 
-//       .content {
-//         flex: 5;
-//         display: flex;
-//         flex-direction: column;
-//         gap: 20px;
+      .content {
+        flex: 5;
+        display: flex;
+        flex-direction: column;
+        gap: 20px;
 
-//         input {
-//           padding: 10px;
-//           border: 1px solid lightgray;
-//         }
+        input {
+          padding: 10px;
+          border: 1px solid lightgray;
+        }
 
-//         .editorContainer {
-//           height: 300px;
-//           overflow: scroll;
-//           border: 1px solid lightgray;
+        .editorContainer {
+          height: 300px;
+          overflow: scroll;
+          border: 1px solid lightgray;
 
-//           .editor {
-//             height: 100%;
-//             border: none;
-//           }
-//         }
-//       }
+          .editor {
+            height: 100%;
+            border: none;
+          }
+        }
+      }
 
-//       .menu {
-//         flex: 2;
-//         display: flex;
-//         flex-direction: column;
-//         gap: 20px;
+      .menu {
+        flex: 2;
+        display: flex;
+        flex-direction: column;
+        gap: 20px;
 
-//         .item {
-//           border: 1px solid lightgray;
-//           padding: 10px;
-//           flex:1;
-//           display: flex;
-//           flex-direction: column;
-//           justify-content: space-between;
-//           font-size: 12px;
-//           color: #555;
+        .item {
+          border: 1px solid lightgray;
+          padding: 10px;
+          flex:1;
+          display: flex;
+          flex-direction: column;
+          justify-content: space-between;
+          font-size: 12px;
+          color: #555;
 
-//           h1{
-//             font-size: 20px;
-//           }
+          h1{
+            font-size: 20px;
+          }
 
-//           .file{
-//             text-decoration: underline;
-//             cursor: pointer;
-//           }
+          .file{
+            text-decoration: underline;
+            cursor: pointer;
+          }
 
-//           .buttons{
-//             display: flex;
-//             justify-content: space-between;
+          .buttons{
+            display: flex;
+            justify-content: space-between;
 
-//             :first-child{
-//               cursor: pointer;
-//               color: teal;
-//               background-color: white;
-//               border: 1px solid teal;
-//               padding: 3px 5px;
-//             }
-//             :last-child{
-//               cursor: pointer;
-//               color: white;
-//               background-color: teal;
-//               border: 1px solid teal;
-//               padding: 3px 5px;
-//             }
-//           }
+            :first-child{
+              cursor: pointer;
+              color: teal;
+              background-color: white;
+              border: 1px solid teal;
+              padding: 3px 5px;
+            }
+            :last-child{
+              cursor: pointer;
+              color: white;
+              background-color: teal;
+              border: 1px solid teal;
+              padding: 3px 5px;
+            }
+          }
 
-//           .cat{
-//             display: flex;
-//             align-items: center;
-//             gap: 2px;
-//             color: teal;
-//           }
-//         }
-    //   }
-    // }
+          .cat{
+            display: flex;
+            align-items: center;
+            gap: 2px;
+            color: teal;
+          }
+        }
+      }
+    }
   }
 }
