--- a/client/src/style.scss
+++ b/client/src/style.scss
@@ -146,7 +146,9 @@ $lightGreen: #b9e7e7;
         .post {
           display: flex;
           gap: 100px;
-
+          height: 300px;
+          overflow: hidden;
+          
           &:nth-child(2n + 1) {
             flex-direction: row-reverse;
           }
@@ -155,16 +157,16 @@ $lightGreen: #b9e7e7;
             flex: 2;
             position: relative;
 
-            &::after {
-              content: "";
-              width: 100%;
-              height: 100%;
-              background-color: $lightGreen;
-              position: absolute;
-              top: 20px;
-              left: -20px;
-              z-index: -1;
-            }
+            // &::after {
+            //   content: "";
+            //   width: 100%;
+            //   height: 100%;
+            //   background-color: $lightGreen;
+            //   position: absolute;
+            //   top: 20px;
+            //   left: -20px;
+            //   z-index: -1;
+            // }
 
             img {
               width: 100%;
@@ -176,13 +178,15 @@ $lightGreen: #b9e7e7;
           }
 
           .content {
-            flex: 3;
+            flex: 2;
             display: flex;
             flex-direction: column;
             justify-content: space-between;
+            text-align: justify;
+
 
             h1 {
-              font-size: 48px;
+              font-size: 40px;
             }
 
             p {
